--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,14 +1,27 @@
 .header {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   gap: 2.4rem;
-  color: var(--primary);
-  font-size: 4.2rem;
 }
 
 svg {
   width: 6.4rem;
   height: 6.4rem;
+}
+
+.logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.4rem;
+  color: var(--primary);
+  text-decoration: none;
+  font-size: 4.2rem;
+  font-weight: 700;
+  width: 100%;
+  margin-bottom: 2.4rem;
+  transition: all 0.1s ease-in-out;
 }
