--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,25 +13,15 @@ body {
     system-ui,
     -apple-system,
     BlinkMacSystemFont,
-    "Segoe UI",
+    'Segoe UI',
     Roboto,
     Oxygen,
     Ubuntu,
     Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
+    'Open Sans',
+    'Helvetica Neue',
     sans-serif;
   font-size: 1.6rem;
   background-color: var(--gray-900);
   color: var(--text-default);
-}
-
-.container {
-  max-width: 98rem;
-  margin: 0 auto;
-}
-
-.content {
-  background-color: blue;
-  margin: 3.2rem;
 }
