--- a/src/components/Logo/styles.module.css
+++ b/src/components/Logo/styles.module.css
@@ -3,5 +3,26 @@
   align-items: center;
   justify-content: center;
   gap: 2.4rem;
-  background-color: red;
+  margin-top: 3.2rem;
+}
+
+.logoLink {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.4rem;
+  font-size: 4.2rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--primary);
+  transition: all 0.2s ease-in-out;
+}
+.logoLink:hover {
+  filter: brightness(80%);
+}
+
+.logoLink svg {
+  width: 6.4rem;
+  height: 6.4rem;
 }
